<?xml version="1.0" encoding="utf-8"?>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"> 

        <RelativeLayout
            android:id="@+id/persondetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/border"
            android:padding="3dp" >

            <ImageView
                android:id="@+id/ppicturefilename"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/politician_image"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/pfullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/ppicturefilename"
                android:layout_below="@+id/ppicturefilename"
                android:layout_marginTop="10dp"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="16dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/paffiliation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/ppicturefilename"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/ppicturefilename"
                android:text="@string/affiliation"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="gone" />

            <TextView
                android:id="@+id/pbio"
                style="@style/TextBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/ppicturefilename"
                android:layout_marginLeft="2dp"
                android:text="@string/fullbio"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="14dp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/psource"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/pbio"
                android:layout_marginLeft="2dp"
                android:text="@string/source"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="12dp"
                android:textStyle="bold"
                android:visibility="visible" />

            <Button
                android:id="@+id/pquotes"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/pbio"
                android:layout_alignTop="@+id/ppicturefilename"
                android:layout_marginRight="33dp"
                android:background="@drawable/title_button"
                android:onClick="quotesclick"
                android:text="@string/all_quotes"
                android:textSize="20dp" />

            <Button
                android:id="@+id/pquotesby"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/pquotes"
                android:layout_below="@+id/pquotes"
                android:background="@drawable/title_button"
                android:onClick="quotesbyclick"
                android:text="@string/by_topic"
                android:layout_marginTop="5dp"
                android:textSize="20dp" />

            <RelativeLayout
                android:id="@+id/ads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/psource" 
                android:layout_marginTop="5dp">

            </RelativeLayout>

        </RelativeLayout>
    
    </ScrollView>

