<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/tpperson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="2dp"
        android:padding="5dp"
        android:background="@drawable/border" >

        <ImageView
            android:id="@+id/tppicturefilename"
            android:contentDescription="@string/politician_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/tpname"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/tppicturefilename"
            android:layout_toRightOf="@+id/tppicturefilename"
            android:text="@string/name"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/tpaffiliation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tpname"
            android:layout_below="@+id/tpname"
            android:text="@string/quote"
            android:textSize="16dp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tprace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tpaffiliation"
            android:layout_below="@+id/tpaffiliation"
            android:text="@string/small_text"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="16dp" />

    </RelativeLayout>

    <ListView
        android:id="@+id/tplist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ads"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:divider="@color/background1"
        android:visibility="visible" >

    </ListView>

    <RelativeLayout
        android:id="@+id/ads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/border" >
    </RelativeLayout>

</RelativeLayout>